fixed flex wrapping

--- a/src/components/atoms/styles/InfoIcon.scss
+++ b/src/components/atoms/styles/InfoIcon.scss
@@ -6,4 +6,5 @@
   text-shadow: 0 -1px 0 #9FBE8E, 0 0 2px white;
 
   margin-right: 25px;
+  margin-top: 75px;
 }
