--- a/src/components/ecosystems/styles/CardRow.scss
+++ b/src/components/ecosystems/styles/CardRow.scss
@@ -1,7 +1,11 @@
 .CardRow {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  margin: 40px 0;
 
-  margin: 30px 0;
+  .LanguageCardContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
