--- a/src/components/organisms/styles/LanguageCard.scss
+++ b/src/components/organisms/styles/LanguageCard.scss
@@ -2,14 +2,14 @@
 
 .LanguageCard {
   text-align: left;
-  width: 160px;
-  height: 160px;
+  min-width: 160px;
+  min-height: 160px;
   vertical-align: top;
   background-color: #f9f9f9;
   border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.125);
 
-  margin: 0 15px;
+  margin: 20px 15px;
 
   display: flex;
   justify-content: center;
